update home page url daftar-permohonan

--- a/public/assets/home/styles/styles.css
+++ b/public/assets/home/styles/styles.css
@@ -29,6 +29,11 @@ body{
   height: 3em;
 }
 
+.icon-4{
+  width: 4em;
+  height: 4em;
+}
+
 .style-none{
   text-decoration: none;
   cursor: pointer;
